test/syntax/06-optional_type-err.c
// ======================================================================

/* optional_type -> STATIC
                  | EXTERN */

// ======================================================================

static int i1;
stati int i2;	// error: not static

void main(void)
{

}

// ======================================================================
